@@ -5,8 +5,11 @@ debian-installer (20051007) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Back to building with udebs from etch.
+  * Split manual out into its own top-level directy, and removed it from build
+    deps and build system. The debian-installer-manual tracking package is
+    replaced by a (currently mostly empty) debian-installer tracking package.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  7 Oct 2005 11:29:37 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri,  7 Oct 2005 15:59:23 -0400
 
 debian-installer (20051006) unstable; urgency=low
 
